# NonlocalityOS

./: .env.template  .gitignore  Cargo.toml  LICENSE  astra.bat  astra.sh  bacon.toml  bench.sh  build.bat  build.sh  clippy.sh  coverage.bat  coverage.sh  find_slow_tests.bat  find_slow_tests.sh  format.bat  fuzz.sh  fuzzing_coverage.sh  install_bacon.bat  install_bacon.sh  install_cargo-fuzz.sh  install_cargo-nextest.bat  install_cargo-nextest.sh  install_cargo-tarpaulin.sh  install_download_manager.bat  install_download_manager.sh  install_sccache.bat  install_sccache.sh  profile_benchmark.sh  profile_test.sh  quick_fuzzing.sh  readme.md  run_management_service.bat  rust-toolchain.toml  setup_dav_fstab.sh  test.bat  test.sh  watch_cargo_tests.bat  watch_cargo_tests.sh  watch_coverage.bat  (+1 more)
.cargo/: config.toml
admin_tool/: Cargo.toml  test.bat
admin_tool/src/: main.rs
astra/: Cargo.toml
astra/.cargo/: config.toml
astra/src/: cluster_configuration.rs  downloads.rs  main.rs
astraea/: Cargo.toml
astraea/proptest-regressions/: tree.txt
astraea/src/: compiler.rs  deep_tree.rs  deep_tree_tests.rs  expressions.rs  expressions_tests.rs  lib.rs  storage.rs  storage_benchmarks.rs  storage_test.rs  storage_tests.rs  tree.rs  tree_benchmarks.rs  tree_tests.rs  type_checking.rs  type_checking_tests.rs  types.rs
dogbox/dogbox_dav_server/: Cargo.toml  dogbox_dav_server.sqlite
dogbox/dogbox_dav_server/src/: file_system.rs  file_system_test.rs  file_system_tests.rs  lib.rs  lib_test.rs  lib_tests.rs  main.rs  main_test.rs
dogbox/dogbox_lambda_apis/: Cargo.toml
dogbox/dogbox_lambda_apis/src/: lib.rs  tests.rs
dogbox/dogbox_tree/: Cargo.toml
dogbox/dogbox_tree/src/: blob_reading.rs  lib.rs  reading.rs  serialization.rs  serialization_test.rs
dogbox/dogbox_tree_editor/: Cargo.toml
dogbox/dogbox_tree_editor/src/: benchmarks.rs  lib.rs  lib_tests.rs  segmented_blob.rs  segmented_blob_tests.rs  sqlite.rs  sqlite_tests.rs  tests2.rs
download_manager/: .env.template  Cargo.toml
download_manager/src/: dropbox.rs  main.rs  main_tests.rs  telegram_bot.rs  telegram_bot_tests.rs  yt_dlp.rs  yt_dlp_tests.rs
example_applications/: .env.template  .gitignore  Cargo.toml  build.bat  build.sh  example_cluster.bat  example_cluster.sh  readme.md  run_all.bat  rust-toolchain.toml  test.bat  test.sh
example_applications/example_cluster/: Cargo.toml
example_applications/example_cluster/src/: cluster_configuration.rs  main.rs
example_applications/rust/: Cargo.toml  format.bat  run_all.bat  rust-toolchain.toml  test.bat
example_applications/rust/call_api/: Cargo.toml
example_applications/rust/call_api/src/: main.rs
example_applications/rust/capnproto_client/: Cargo.toml  client.rs  test.bat
example_applications/rust/capnproto_server/: Cargo.toml  server.rs
example_applications/rust/database/: format.bat  test.bat
example_applications/rust/database/database_client/: Cargo.toml  test.bat
example_applications/rust/database/database_server/: Cargo.toml  test.bat
example_applications/rust/database/database_trait/: Cargo.toml
example_applications/rust/essrpc_client/: Cargo.toml
example_applications/rust/essrpc_client/src/: main.rs
example_applications/rust/essrpc_example/: format.bat  test.bat
example_applications/rust/essrpc_example/essrpc_client/: Cargo.toml  test.bat
example_applications/rust/essrpc_example/essrpc_server/: Cargo.toml  test.bat
example_applications/rust/essrpc_example/essrpc_trait/: Cargo.toml  test.bat
example_applications/rust/essrpc_server/: Cargo.toml
example_applications/rust/essrpc_server/src/: main.rs
example_applications/rust/hello_rust/: test.bat
example_applications/rust/hello_rust/src/: main.rs
example_applications/rust/idle_service/: Cargo.toml  test.bat
example_applications/rust/idle_service/src/: main.rs
example_applications/rust/provide_api/: Cargo.toml
example_applications/rust/tarpc_server/: Cargo.toml
example_applications/rust/telegram_bot/: Cargo.toml
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_functions/: Cargo.toml
fuzz/fuzz_functions/src/: lambda_compiler_parse.rs  lambda_compiler_tokenize.rs  lib.rs  prolly_tree_editable_node_insert.rs  prolly_tree_editable_node_remove.rs  prolly_tree_insert.rs  prolly_tree_size_tracker.rs  segmented_blob.rs  sorted_tree_insert.rs
fuzz/fuzz_targets/: lambda-compiler-parse.rs  lambda-compiler-tokenize.rs  prolly-tree-editable-node-insert.rs  prolly-tree-editable-node-remove.rs  prolly-tree-insert.rs  prolly-tree-size-tracker.rs  segmented_blob.rs  sorted-tree-insert.rs  write-read-large-files.rs
lambda/: Cargo.toml
lambda/src/: builtins.rs  compilation.rs  compilation_test.rs  compiler.rs  complex_expression_tests.rs  effect_tests.rs  evaluation_tests.rs  expressions.rs  expressions_tests.rs  hello_world_tests.rs  lib.rs  name.rs  parsing.rs  parsing_test.rs  standard_library.rs  tokenization.rs  type_checking.rs  type_checking_tests.rs  types.rs
lambda_compiler/: Cargo.toml
lambda_compiler/examples/: hello_world.tl  integers.tl  lambda_captures.tl  lambda_parameter.tl  lambda_parameters.tl  local_variables.tl  type_of.tl
lambda_compiler/src/: ast.rs  compilation.rs  compilation_test.rs  compilation_tests.rs  examples_test.rs  format.rs  format_test.rs  lib.rs  parsing.rs  parsing_test.rs  parsing_tests.rs  tokenization.rs  tokenization_test.rs  type_checking.rs  type_checking_test.rs
management_service/: Cargo.toml  test.bat
management_service/src/: main.rs
nonlocality_build_utils/: Cargo.toml
nonlocality_build_utils/src/: coverage.rs  downloads.rs  downloads_test.rs  host.rs  host_test.rs  install.rs  lib.rs  podman.rs  raspberrypi.rs  run.rs  wasi.rs
nonlocality_host/: Cargo.toml
nonlocality_host/src/: dav_server.rs  fake_operating_system.rs  lib.rs  main.rs  main_tests.rs  operating_system.rs
sorted_tree/: Cargo.toml
sorted_tree/src/: lib.rs  prolly_tree.rs  prolly_tree_editable_node.rs  prolly_tree_editable_node_tests.rs  prolly_tree_tests.rs  sorted_tree.rs  sorted_tree_tests.rs
totp_example/: Cargo.toml
totp_example/src/: main.rs
(+44 files in other folders)
