[workspace]
members=[
    "admin_tool",
    "astra",
    "management_service",
    "nonlocality_env",
    "nonlocality_build_utils",
    "astraea",
    "lambda",
    "lambda_compiler",
    "nonlocality_host",
    "hippeus_parser_generator",
    "totp_example",
    "dogbox/dogbox_tree",
    "dogbox/dogbox_tree_editor",
    "dogbox/dogbox_dav_server",
    "dogbox/dogbox_lambda_apis",
    "fuzz",
]
resolver="2"

[profile.release]
panic = "abort"
debug = true
