[workspace]
members=[
    "astra",
    "nonlocality_build_utils",
    "astraea",
    "lambda",
    "lambda_compiler",
    "nonlocality_host",
    "hippeus_parser_generator",
    "totp_example",
    "dogbox/dogbox_tree",
    "dogbox/dogbox_tree_editor",
    "dogbox/dogbox_dav_server",
    "dogbox/dogbox_lambda_apis",
    "fuzz",
]
resolver="2"

[profile.release]
panic = "abort"
# Try to keep the nonlocality_host binary small so that uploads are quick.
debug = false

# We don't strip because we want RUST_BACKTRACE to show names of functions.
# The default for strip is false according to the docs (https://doc.rust-lang.org/cargo/reference/profiles.html#strip).
# Strange observation: Setting strip to false explicitly makes the binaries larger than not setting strip at all.
#strip = false

# opt-levels "s" and "z" didn't appear to make the binaries smaller compared to 3.
# https://doc.rust-lang.org/cargo/reference/profiles.html#opt-level
opt-level = 3

# LTO made the nonlocality_host binary significantly smaller (1.2 MB -> 944 KB).
# https://llvm.org/docs/LinkTimeOptimization.html
lto = true
