[package]
name = "admin_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essrpc = {version = "0", features = ["bincode_transport", "async_client"]}
management_interface = { path ="../management_interface" }
postcard = {version = "1", features = []}
