[package]
name = "astra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.40.0", features = ["rt-multi-thread", "macros", "fs", "io-util"]}
async-recursion = "1.1.1"
ssh2 = "0.9.4"
dotenv = "0.15.0"
relative-path = "1.9.3"
management_interface = { path ="../management_interface" }
nonlocality_build_utils = { path ="../nonlocality_build_utils" }
serde = {version = "1.0", features = ["alloc"]}
