[package]
name = "astra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"]}
async-recursion = "1"
ssh2 = "0"
dotenv = "0"
relative-path = "2"
nonlocality_build_utils = { path ="../nonlocality_build_utils" }
nonlocality_host = { path ="../nonlocality_host" }
astraea = { path ="../astraea" }
serde = {version = "1", features = ["alloc"]}
tempfile = "3"
tracing = "0"
tracing-subscriber = "0"
rusqlite = {version = "0", features = ["bundled"]}
clap = { version = "4", features = ["derive"] }
