[package]
name = "astraea"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
hippeus_parser_generator = { path ="../hippeus_parser_generator" }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync"]}
tokio-stream = "0"
async-stream = "0"
futures-util = "0"
futures-core = "0"
sha3 = "0"
serde = "1"
postcard = {version = "1", features = ["alloc"]}
lazy_static = "1"
tempfile = "3"
hex = "0"
tracing = "0"
bytes = "1"
cached = "0"
async-trait = "0"
async-scoped = {version = "0", features = ["use-tokio"]}

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
proptest = "1"
rand = { version = "0", features = [ "small_rng", "min_const_gen" ]}
test-log = {version = "0", features = ["trace", "log", "color"]}

[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = {version = "0", features = ["bundled-sqlcipher"]}

[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = {version = "0", features = ["bundled"]}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0"
