[package]
name = "download_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astraea = { path ="../astraea" }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "process", "io-util", "signal"]}
tracing = "0"
tracing-subscriber = "0"
rusqlite = {version = "0", features = ["bundled"]}
clap = { version = "4", features = ["derive"] }
notify = "8"
async-trait = "0"
pretty_assertions = "1"
tempfile = "3"
sha3 = "0"
teloxide = { version = "0", features = ["macros"] }
dotenv = "0"

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
