[workspace]
members=[
    "example_cluster",
    "rust/call_api",
    "rust/essrpc_example/essrpc_client",
    "rust/essrpc_example/essrpc_server",
    "rust/essrpc_example/essrpc_trait",
    "rust/hello_rust",
    "rust/idle_service",
    "rust/provide_api",
    "rust/telegram_bot",
]
resolver="2"
