[package]
name = "nonlocality-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
dogbox_tree_editor = { path ="../dogbox/dogbox_tree_editor" }
dogbox_tree = { path ="../dogbox/dogbox_tree" }
fuzz_functions = { path ="fuzz_functions" }
astraea = { path ="../astraea" }
tokio = { version = "1", features = ["full"] }
bytes = "1"
postcard = {version = "1", features = ["alloc"]}
tracing = "0"
serde = "1"
tokio-macros = "2"
rand = { version = "0", features = [ "small_rng" ]}
pretty_assertions = "1"

[[bin]]
name = "segmented-blob"
path = "fuzz_targets/segmented_blob.rs"
test = false
doc = false
bench = false

[[bin]]
name = "write-read-large-files"
path = "fuzz_targets/write-read-large-files.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lambda-compiler-parse"
path = "fuzz_targets/lambda-compiler-parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lambda-compiler-tokenize"
path = "fuzz_targets/lambda-compiler-tokenize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sorted-tree-insert"
path = "fuzz_targets/sorted-tree-insert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "prolly-tree-editable-node-insert"
path = "fuzz_targets/prolly-tree-editable-node-insert.rs"
test = false
doc = false
bench = false

[[bin]]
name = "prolly-tree-editable-node-remove"
path = "fuzz_targets/prolly-tree-editable-node-remove.rs"
test = false
doc = false
bench = false

[[bin]]
name = "prolly-tree-size-tracker"
path = "fuzz_targets/prolly-tree-size-tracker.rs"
test = false
doc = false
bench = false
