[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
hippeus_parser_generator = { path = "../hippeus_parser_generator" }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync"]}
astraea = { path = "../astraea" }
dogbox_tree = { path = "../dogbox/dogbox_tree" }
dogbox_tree_editor = { path = "../dogbox/dogbox_tree_editor" }
serde = "1"
postcard = {version = "1", features = ["alloc"]}
lazy_static = "1"
futures = "0"
bytes = "1"
async-trait = "0"
rusqlite = {version = "0", features = ["bundled"]}
pretty_assertions = "1"

[dependencies.uuid]
version = "1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
