[package]
name = "lambda_compiler"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
hippeus_parser_generator = { path ="../hippeus_parser_generator" }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync"]}
astraea = { path ="../astraea" }
lambda = { path ="../lambda" }
serde = "1"
postcard = {version = "1", features = ["alloc"]}
lazy_static = "1"
futures = "0"
bytes = "1"
rusqlite = {version = "0", features = ["bundled"]}
pretty_assertions = "1"

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
test-case = "3"
