[package]
name = "management_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relative-path = "1.9.3"
wasmtime = "20.0.2"
wasi-common = "20.0.0"
display_bytes = "0.2.1"
wiggle = "20.0.0"
promising-future = "0.2.4"
os_pipe = "1.1.5"
wasmtime-wasi-threads = "20.0.0"
anyhow = { version = "1.0", default-features = false }
management_interface = { path ="../management_interface" }
essrpc = {version = "0.4.1", features = ["bincode_transport", "async_client"]}
tokio = {version = "1.40.0", features = ["rt-multi-thread", "macros", "process", "net", "fs"]}
tokio-util = {version = "0.7.11", features = ["io-util", "io"]}
postcard = {version = "1.0", features = []}
serde = {version = "1.0", features = []}
wat = "1"
async-scoped = {version = "0.9.0", features = ["use-tokio"]}
cap-std = "3"
argparse = "0.2.2"
tempfile = "3"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
webpki-roots = "0.26"
