[package]
name = "management_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relative-path = "1"
wasmtime = "27"
wasi-common = "27"
display_bytes = "0"
wiggle = "27"
promising-future = "0"
os_pipe = "1"
wasmtime-wasi-threads = "27"
anyhow = { version = "1", default-features = false }
management_interface = { path ="../management_interface" }
essrpc = {version = "0", features = ["bincode_transport", "async_client"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros", "process", "net", "fs"]}
tokio-util = {version = "0", features = ["io-util", "io"]}
postcard = {version = "1", features = []}
serde = {version = "1", features = []}
wat = "1"
async-scoped = {version = "0", features = ["use-tokio"]}
argparse = "0"
tempfile = "3"
rustls = { version = "0", default-features = false, features = ["std", "ring"] }
webpki-roots = "0"
