[package]
name = "nonlocality_build_utils"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
curl = "0"
xz2 = "0"
tar = "0"
flate2 = "1"
tempfile = "3"
tokio = {version = "1", features = ["process", "macros"]}
ssh2 = "0"
relative-path = "1"
dotenv = "0"
fs_extra = "1"
futures-util = "0"

[target.'cfg(target_os = "linux")'.dependencies]
podman-api = "0"
uzers = "0"
