[package]
name = "nonlocality_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astraea = { path ="../astraea" }
lambda = { path ="../lambda" }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync"]}
