[package]
name = "nonlocality_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astraea = { path ="../astraea" }
lambda = { path ="../lambda" }
dogbox_dav_server = { path ="../dogbox/dogbox_dav_server" }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"]}
tracing = "0"
tracing-subscriber = "0"
tempfile = "3"
chrono = "0"
clap = { version = "4.0", features = ["derive"] }