[package]
name = "sorted_tree"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path ="../astraea" }
serde = "1"
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync"]}
postcard = {version = "1", features = ["alloc"]}
pretty_assertions = "1"
bytes = "1"
sha3 = "0"

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
rand = { version = "0", features = [ "small_rng", "min_const_gen" ]}
