[package]
name = "dogbox_dav_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dogbox_blob_layer = { path ="../dogbox_blob_layer" }
dogbox_tree_editor = { path ="../dogbox_tree_editor" }
dav-server = "0.5"
hyper = { version = "0.14", features = [ "http1", "http2", "server", "stream", "runtime" ] }
tokio = { version = "1.3", features = ["full"] }
async-stream = "0.3"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
relative-path = "1.9"
futures = "0.3"
