[package]
name = "dogbox_dav_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astraea = { path ="../../astraea" }
dogbox_tree_editor = { path ="../dogbox_tree_editor" }
dav-server = "0"
hyper = { version = "1", features = [ "http1", "http2", "server" ] }
hyper-util = { version = "*", features = [ "tokio" ] }
tokio = { version = "1", features = ["full"] }
async-stream = "0"
bytes = "1"
tracing = "0"
tracing-subscriber = "0"
relative-path = "1"
futures = "0"
tempfile = "3"
rand = { version = "0", features = [ "small_rng" ]}

[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = {version = "0", features = ["bundled-sqlcipher"]}

[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = {version = "0", features = ["bundled"]}

[dev-dependencies]
reqwest_dav = "0"
test-log = {version = "0", features = ["trace", "log", "color"]}
