[package]
name = "dogbox_dav_server"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astraea = { path ="../../astraea" }
dogbox_tree_editor = { path ="../dogbox_tree_editor" }
dogbox_tree = { path ="../dogbox_tree" }
dav-server = "0"
hyper = { version = "1", features = [ "http1", "http2", "server" ] }
hyper-util = { version = "*", features = [ "tokio" ] }
tokio = { version = "1", features = ["full"] }
async-stream = "0"
bytes = "1"
tracing = "0"
tracing-subscriber = "0"
relative-path = "2"
futures = "0"
rusqlite = {version = "0", features = ["bundled"]}
pretty_assertions = "1"

[dev-dependencies]
reqwest_dav = "0"
test-log = {version = "0", features = ["trace", "log", "color"]}
tempfile = "3"
rand = { version = "0", features = [ "small_rng" ]}
