[package]
name = "dogbox_lambda_apis"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path ="../../astraea" }
lambda = { path ="../../lambda" }
dogbox_tree = { path ="../dogbox_tree" }
dogbox_tree_editor = { path ="../dogbox_tree_editor" }
test-log = {version = "0", features = ["trace", "log", "color"]}
tokio = { version = "1", features = ["full"] }
bytes = "1"
serde = "1"
async-trait = "0"
postcard = {version = "1", features = ["alloc"]}

[target.'cfg(target_os = "linux")'.dev-dependencies]
rusqlite = {version = "0", features = ["bundled-sqlcipher"]}

[target.'cfg(target_os = "windows")'.dev-dependencies]
rusqlite = {version = "0", features = ["bundled"]}
