[package]
name = "dogbox_tree"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
dogbox_blob_layer = { path ="../dogbox_blob_layer" }
serde = "1"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.3", features = ["full"] }
tokio-macros = "2.2"
async-trait = "0.1"
async-stream = "0.3"
postcard = {version = "1", features = ["alloc"]}
