[package]
name = "dogbox_tree"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path ="../../astraea" }
dogbox_blob_layer = { path ="../dogbox_blob_layer" }
serde = "1"
futures-core = "0"
futures-util = "0"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2"
async-trait = "0"
async-stream = "0"
postcard = {version = "1", features = ["alloc"]}
