[package]
name = "dogbox_tree"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path ="../../astraea" }
serde = "1"
futures-core = "0"
futures-util = "0"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2"
async-trait = "0"
async-stream = "0"
postcard = {version = "1", features = ["alloc"]}
pretty_assertions = "1"
tracing = "0"

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
