[package]
name = "dogbox_tree_editor"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
astraea = { path ="../../astraea" }
dogbox_tree = { path ="../dogbox_tree" }
futures-core = "0"
relative-path = "1"
tokio = { version = "1", features = ["full"] }
futures = "0"
async-stream = "0"
bytes = "1"
postcard = {version = "1", features = ["alloc"]}
tracing = "0"
lazy_static = "1"

[dev-dependencies]
pretty_assertions = "1"
