[package]
name = "example_cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.37.0", features = ["rt-multi-thread", "macros", "process", "fs", "io-util"]}
async-recursion = "1.1.1"
management_interface = { path ="../../management_interface" }
nonlocality_build_utils = { path ="../../nonlocality_build_utils" }
postcard = {version = "1.0", features = ["alloc"]}
serde = {version = "1.0", features = ["alloc"]}
