[workspace]
members=[
    "call_api",
    "database/database_client",
    "database/database_server",
    "database/database_trait",
    "essrpc_example/essrpc_client",
    "essrpc_example/essrpc_server",
    "essrpc_example/essrpc_trait",
    "hello_rust",
    "idle_service",
    "provide_api",
]
resolver="2"