[package]
name = "fuzz_functions"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
postcard = {version = "1", features = ["use-std"]}
pretty_assertions = "1"
lambda_compiler = { path ="../../lambda_compiler" }
lambda = { path ="../../lambda" }
arbitrary = { version = "1", features = ["derive"] }

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
test-case = "3"
