[package]
name = "fuzz_functions"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
postcard = {version = "1", features = ["use-std"]}
pretty_assertions = "1"
lambda_compiler = { path = "../../lambda_compiler" }
lambda = { path = "../../lambda" }
arbitrary = { version = "1", features = ["derive"] }
tokio = {version = "1", features = ["rt-multi-thread", "macros", "time", "sync"]}
astraea = { path = "../../astraea" }
rand = { version = "0", features = [ "small_rng", "min_const_gen" ]}
sorted_tree = { path = "../../sorted_tree" }

[dev-dependencies]
test-log = {version = "0", features = ["trace", "log", "color"]}
test-case = "3"
