[package]
name = "database_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essrpc = {version = "0", features = ["bincode_transport", "async_client"]}
nonlocality_env = { path ="../../../../nonlocality_env" }
database_trait = { path ="../database_trait" }
